--- a/hotelReservation/knative/svc/srv-profile.yaml
+++ b/hotelReservation/knative/svc/srv-profile.yaml
@@ -11,7 +11,7 @@ spec:
         env:
         - name: DLOG
           value: DEBUG
-        image: teresaliuchang/hotel_demo:v1.7
+        image: vhiveease/hotel_demo
         name: hotel-reserv-profile
         ports:
           - name: h2c
