--- a/hotelReservation/helm-chart/hotelreservation/charts/frontend/values.yaml
+++ b/hotelReservation/helm-chart/hotelreservation/charts/frontend/values.yaml
@@ -6,7 +6,7 @@ ports:
 
 container:
   command: frontend
-  image: deathstarbench/hotel-reservation
+  image: vhiveease/hotel_demo
   name: hotel-reserv-frontend
   ports:
   - containerPort: 5000
