--- a/hotelReservation/helm-chart/hotelreservation/charts/geo/values.yaml
+++ b/hotelReservation/helm-chart/hotelreservation/charts/geo/values.yaml
@@ -6,7 +6,7 @@ ports:
  
 container:
   command: geo
-  image: deathstarbench/hotel-reservation
+  image: vhiveease/hotel_demo
   name: hotel-reserv-geo
   ports:
   - containerPort: 8083
