--- a/hotelReservation/helm-chart/hotelreservation/charts/profile/values.yaml
+++ b/hotelReservation/helm-chart/hotelreservation/charts/profile/values.yaml
@@ -6,7 +6,7 @@ ports:
  
 container:
   command: profile
-  image: deathstarbench/hotel-reservation
+  image: vhiveease/hotel_demo
   name: hotel-reserv-profile
   ports:
   - containerPort: 8081
