--- a/hotelReservation/helm-chart/hotelreservation/charts/recommendation/values.yaml
+++ b/hotelReservation/helm-chart/hotelreservation/charts/recommendation/values.yaml
@@ -6,7 +6,7 @@ ports:
  
 container:
   command: recommendation
-  image: deathstarbench/hotel-reservation
+  image: vhiveease/hotel_demo
   name: hotel-reserv-recommendation
   ports:
   - containerPort: 8085
