--- a/hotelReservation/helm-chart/hotelreservation/charts/reservation/values.yaml
+++ b/hotelReservation/helm-chart/hotelreservation/charts/reservation/values.yaml
@@ -6,7 +6,7 @@ ports:
  
 container:
   command: reservation
-  image: deathstarbench/hotel-reservation
+  image: vhiveease/hotel_demo
   name: hotel-reserv-reservation
   ports:
   - containerPort: 8087
