--- a/hotelReservation/helm-chart/hotelreservation/charts/search/values.yaml
+++ b/hotelReservation/helm-chart/hotelreservation/charts/search/values.yaml
@@ -6,7 +6,7 @@ ports:
  
 container:
   command: search
-  image: deathstarbench/hotel-reservation
+  image: vhiveease/hotel_demo
   name: hotel-reserv-search
   ports:
   - containerPort: 8082
