--- a/hotelReservation/helm-chart/hotelreservation/charts/user/values.yaml
+++ b/hotelReservation/helm-chart/hotelreservation/charts/user/values.yaml
@@ -6,7 +6,7 @@ ports:
  
 container:
   command: user
-  image: deathstarbench/hotel-reservation
+  image: vhiveease/hotel_demo
   name: hotel-reserv-user
   ports:
   - containerPort: 8086
