--- a/mediaMicroservices/nginx-web-server/conf/nginx.conf
+++ b/mediaMicroservices/nginx-web-server/conf/nginx.conf
@@ -5,7 +5,7 @@ load_module modules/ngx_http_opentracing_module.so;
 # nginx process
 worker_processes  4;
 
-# error_log  logs/error.log;
+error_log  logs/error.log;
 
 # Checklist: Make sure that worker_connections * worker_processes
 # is greater than the total connections between the client and Nginx. 
@@ -56,6 +56,7 @@ http {
     # error_log off;
 
     lua_need_request_body on;
+    lua_code_cache off;
 
     # Checklist: Make sure that the location here is consistent
     # with the location you specified in wrk2.
