--- a/socialNetwork/helm-chart/socialnetwork/charts/media-service/values.yaml
+++ b/socialNetwork/helm-chart/socialnetwork/charts/media-service/values.yaml
@@ -7,7 +7,7 @@ ports:
 container:
   command: MediaService
   image: shyamjesal/social-network-microservices
-  name: media-service
+  name: media-service-container
   ports: 
   - containerPort: 80
 
