--- a/socialNetwork/helm-chart/socialnetwork/charts/compose-post-service/values.yaml
+++ b/socialNetwork/helm-chart/socialnetwork/charts/compose-post-service/values.yaml
@@ -7,7 +7,7 @@ ports:
 container:
   command: ComposePostService
   image: shyamjesal/social-network-microservices
-  name: compose-post-service
+  name: compose-post-service-container
   ports: 
   - containerPort: 80
 
